--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
-        <head></head>
+        <head>
+                <title>Proeto</title>
+        </head>
         <body></body>
 </html>
