--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
         <head>
-                <title>Proeto</title>
+                <title>Projeto</title>
         </head>
         <body></body>
 </html>
